# py-trees-ros-viewer-websocket

./: .project  README.md  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/py_trees_ros_viewer_websocket/share/py_trees_ros_viewer_websocket/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
py_trees_ros_viewer_websocket/: __init__.py  backend.py  utilities.py  viewer.py
