<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_ros_viewer_websocket</name>
  <version>0.0.1</version>
  <description>
  ROS2 Node - py_trees tooling - A modified version of py_trees_ros_viewer (by Daniel Stonier). That publish the parsed tree data to a new topic. In order to serve with Rosbridge Websocket.
  </description>

  <maintainer email="raphaelbp12@gmail.com">Raphael Parreira</maintainer>
  <author>Raphael Parreira</author>

  <license>BSD</license>

  <url type="website">https://github.com/raphaelbp12/py-trees-ros-viewer-websocket</url>
  <url type="repository">https://github.com/raphaelbp12/py-trees-ros-viewer-websocket</url>
  <url type="bugtracker">https://github.com/raphaelbp12/py-trees-ros-viewer-websocket/issues</url>

  <build_depend>python3-setuptools</build_depend>
  <build_depend>pyqt5-dev-tools</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>

  <exec_depend>py_trees_ros_interfaces</exec_depend>
  <exec_depend>py_trees_js</exec_depend>
  <exec_depend>python3-qt5-bindings</exec_depend>
  <exec_depend>python3-pyqt5.qtwebengine</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
